@@ -57,6 +57,8 @@
 - NEW: Column in the check-for-modifications dialog to show 
        the lock date. (Stefan)
 - NEW: Context menu to delete and ignore files at the same time. (Stefan)
+- NEW: Tooltips in the action column of the log dialog, explaining the
+       action icons. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
